--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Dell\AppData\Local\Temp\testng-eclipse-2039348771\testng-customsuite.xml</span>
+                    <span>C:\Users\Dell\AppData\Local\Temp\testng-eclipse-945079094\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">5 methods,   5 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,7 +104,27 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="almosaferProject.FinallTest" class="method navigator-link" hash-for-method="testAlmosaferAssertions">testAlmosaferAssertions</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="almosaferProject.FinallTest" class="method navigator-link" hash-for-method="CheckContactNumber">CheckContactNumber</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="almosaferProject.FinallTest" class="method navigator-link" hash-for-method="CheckQitagLogo">CheckQitagLogo</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="almosaferProject.FinallTest" class="method navigator-link" hash-for-method="CheckdefaultCurrencyisSAR">CheckdefaultCurrencyisSAR</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="almosaferProject.FinallTest" class="method navigator-link" hash-for-method="checkHotel">checkHotel</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="almosaferProject.FinallTest" class="method navigator-link" hash-for-method="testAlmosaferDefaultLanguageisEN">testAlmosaferDefaultLanguageisEN</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -127,9 +147,37 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testAlmosaferAssertions">
-                  </a> <!-- testAlmosaferAssertions -->
-                  <span class="method-name">testAlmosaferAssertions</span>
+                  <a name="CheckContactNumber">
+                  </a> <!-- CheckContactNumber -->
+                  <span class="method-name">CheckContactNumber</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="CheckQitagLogo">
+                  </a> <!-- CheckQitagLogo -->
+                  <span class="method-name">CheckQitagLogo</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="CheckdefaultCurrencyisSAR">
+                  </a> <!-- CheckdefaultCurrencyisSAR -->
+                  <span class="method-name">CheckdefaultCurrencyisSAR</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="checkHotel">
+                  </a> <!-- checkHotel -->
+                  <span class="method-name">checkHotel</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testAlmosaferDefaultLanguageisEN">
+                  </a> <!-- testAlmosaferDefaultLanguageisEN -->
+                  <span class="method-name">testAlmosaferDefaultLanguageisEN</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +185,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Dell\AppData\Local\Temp\testng-eclipse-2039348771\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Dell\AppData\Local\Temp\testng-eclipse-945079094\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -186,16 +234,32 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(5);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testAlmosaferAssertions')
+data.setCell(0, 1, 'CheckContactNumber')
 data.setCell(0, 2, 'almosaferProject.FinallTest')
-data.setCell(0, 3, 59);
+data.setCell(0, 3, 289);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'CheckQitagLogo')
+data.setCell(1, 2, 'almosaferProject.FinallTest')
+data.setCell(1, 3, 110);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'CheckdefaultCurrencyisSAR')
+data.setCell(2, 2, 'almosaferProject.FinallTest')
+data.setCell(2, 3, 41);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'testAlmosaferDefaultLanguageisEN')
+data.setCell(3, 2, 'almosaferProject.FinallTest')
+data.setCell(3, 3, 30);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'checkHotel')
+data.setCell(4, 2, 'almosaferProject.FinallTest')
+data.setCell(4, 3, 26);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 59 ms</span>
+              <span class="suite-total-time">Total running time: 496 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -227,8 +291,24 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">testAlmosaferAssertions</span>
-                <span class="method-start">4219 ms</span>
+                <span class="method-name">CheckQitagLogo</span>
+                <span class="method-start">3830 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">checkHotel</span>
+                <span class="method-start">3947 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testAlmosaferDefaultLanguageisEN</span>
+                <span class="method-start">3975 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">CheckdefaultCurrencyisSAR</span>
+                <span class="method-start">4007 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">CheckContactNumber</span>
+                <span class="method-start">4057 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
