--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,14 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">4,289</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">4,364</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">almosaferProject.FinallTest</td><td><a href="#m0">testAlmosaferAssertions</a></td><td rowspan="1">1723658967769</td><td rowspan="1">59</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">almosaferProject.FinallTest</td><td><a href="#m0">CheckContactNumber</a></td><td rowspan="1">1723661437994</td><td rowspan="1">289</td></tr><tr class="passedeven"><td><a href="#m1">CheckQitagLogo</a></td><td rowspan="1">1723661437767</td><td rowspan="1">110</td></tr><tr class="passedeven"><td><a href="#m2">CheckdefaultCurrencyisSAR</a></td><td rowspan="1">1723661437944</td><td rowspan="1">41</td></tr><tr class="passedeven"><td><a href="#m3">checkHotel</a></td><td rowspan="1">1723661437884</td><td rowspan="1">26</td></tr><tr class="passedeven"><td><a href="#m4">testAlmosaferDefaultLanguageisEN</a></td><td rowspan="1">1723661437912</td><td rowspan="1">30</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">almosaferProject.FinallTest#testAlmosaferAssertions</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">almosaferProject.FinallTest#CheckContactNumber</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">almosaferProject.FinallTest#CheckQitagLogo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">almosaferProject.FinallTest#CheckdefaultCurrencyisSAR</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">almosaferProject.FinallTest#checkHotel</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">almosaferProject.FinallTest#testAlmosaferDefaultLanguageisEN</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
