--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Dell\AppData\Local\Temp\testng-eclipse-945079094\testng-customsuite.xml</span>
+                    <span>C:\Users\Dell\AppData\Local\Temp\testng-eclipse--1911420030\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">8 methods,   8 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -119,7 +119,22 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="almosaferProject.FinallTest" class="method navigator-link" hash-for-method="HotelSearchBox">HotelSearchBox</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="almosaferProject.FinallTest" class="method navigator-link" hash-for-method="checkHotel">checkHotel</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="almosaferProject.FinallTest" class="method navigator-link" hash-for-method="searchButton">searchButton</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="almosaferProject.FinallTest" class="method navigator-link" hash-for-method="test">test</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -168,9 +183,30 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
+                  <a name="HotelSearchBox">
+                  </a> <!-- HotelSearchBox -->
+                  <span class="method-name">HotelSearchBox</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="checkHotel">
                   </a> <!-- checkHotel -->
                   <span class="method-name">checkHotel</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="searchButton">
+                  </a> <!-- searchButton -->
+                  <span class="method-name">searchButton</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="test">
+                  </a> <!-- test -->
+                  <span class="method-name">test</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -185,7 +221,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Dell\AppData\Local\Temp\testng-eclipse-945079094\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Dell\AppData\Local\Temp\testng-eclipse--1911420030\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -234,32 +270,44 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(8);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'CheckContactNumber')
+data.setCell(0, 1, 'searchButton')
 data.setCell(0, 2, 'almosaferProject.FinallTest')
-data.setCell(0, 3, 289);
+data.setCell(0, 3, 11888);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'CheckQitagLogo')
+data.setCell(1, 1, 'test')
 data.setCell(1, 2, 'almosaferProject.FinallTest')
-data.setCell(1, 3, 110);
+data.setCell(1, 3, 4112);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'CheckdefaultCurrencyisSAR')
+data.setCell(2, 1, 'checkHotel')
 data.setCell(2, 2, 'almosaferProject.FinallTest')
-data.setCell(2, 3, 41);
+data.setCell(2, 3, 149);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'testAlmosaferDefaultLanguageisEN')
+data.setCell(3, 1, 'CheckQitagLogo')
 data.setCell(3, 2, 'almosaferProject.FinallTest')
-data.setCell(3, 3, 30);
+data.setCell(3, 3, 98);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'checkHotel')
+data.setCell(4, 1, 'testAlmosaferDefaultLanguageisEN')
 data.setCell(4, 2, 'almosaferProject.FinallTest')
-data.setCell(4, 3, 26);
+data.setCell(4, 3, 90);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'HotelSearchBox')
+data.setCell(5, 2, 'almosaferProject.FinallTest')
+data.setCell(5, 3, 76);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'CheckdefaultCurrencyisSAR')
+data.setCell(6, 2, 'almosaferProject.FinallTest')
+data.setCell(6, 3, 71);
+data.setCell(7, 0, 7)
+data.setCell(7, 1, 'CheckContactNumber')
+data.setCell(7, 2, 'almosaferProject.FinallTest')
+data.setCell(7, 3, 44);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 496 ms</span>
+              <span class="suite-total-time">Total running time: 16 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -291,24 +339,36 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">CheckQitagLogo</span>
-                <span class="method-start">3830 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">checkHotel</span>
-                <span class="method-start">3947 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
                 <span class="method-name">testAlmosaferDefaultLanguageisEN</span>
-                <span class="method-start">3975 ms</span>
+                <span class="method-start">3948 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">CheckdefaultCurrencyisSAR</span>
-                <span class="method-start">4007 ms</span>
+                <span class="method-start">4045 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">CheckContactNumber</span>
-                <span class="method-start">4057 ms</span>
+                <span class="method-start">4118 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">CheckQitagLogo</span>
+                <span class="method-start">4165 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">checkHotel</span>
+                <span class="method-start">4272 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">test</span>
+                <span class="method-start">4424 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">HotelSearchBox</span>
+                <span class="method-start">8538 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">searchButton</span>
+                <span class="method-start">8616 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
