--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,16 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="67eb8a">  <td>24/08/14 21:50:33</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;FinallTest.mytest()[pri:0, instance:almosaferProject.FinallTest@757d6814]">&gt;&gt;mytest</td> 
+<tr bgcolor="67eb8a">  <td>24/08/19 19:24:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinallTest.checkHotel()[pri:5, instance:almosaferProject.FinallTest@757d6814]">checkHotel</td> 
+  <td>main@1937962514</td>   <td></td> </tr>
+<tr bgcolor="67eb8a">  <td>24/08/19 19:24:00</td>   <td>-107</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinallTest.CheckQitagLogo()[pri:4, instance:almosaferProject.FinallTest@757d6814]">CheckQitagLogo</td> 
+  <td>main@1937962514</td>   <td></td> </tr>
+<tr bgcolor="67eb8a">  <td>24/08/19 19:23:56</td>   <td>-4265</td> <td>&nbsp;</td><td title="&gt;&gt;FinallTest.mytest()[pri:0, instance:almosaferProject.FinallTest@757d6814]">&gt;&gt;mytest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="67eb8a">  <td>24/08/14 21:50:37</td>   <td>3825</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinallTest.CheckQitagLogo()[pri:0, instance:almosaferProject.FinallTest@757d6814]">CheckQitagLogo</td> 
+<tr bgcolor="67eb8a">  <td>24/08/19 19:24:00</td>   <td>-325</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinallTest.testAlmosaferDefaultLanguageisEN()[pri:1, instance:almosaferProject.FinallTest@757d6814]">testAlmosaferDefaultLanguageisEN</td> 
   <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="67eb8a">  <td>24/08/14 21:50:37</td>   <td>4052</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinallTest.CheckContactNumber()[pri:3, instance:almosaferProject.FinallTest@757d6814]">CheckContactNumber</td> 
+<tr bgcolor="67eb8a">  <td>24/08/19 19:24:05</td>   <td>4344</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinallTest.searchButton()[pri:9, instance:almosaferProject.FinallTest@757d6814]">searchButton</td> 
   <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="67eb8a">  <td>24/08/14 21:50:37</td>   <td>3942</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinallTest.checkHotel()[pri:0, instance:almosaferProject.FinallTest@757d6814]">checkHotel</td> 
+<tr bgcolor="67eb8a">  <td>24/08/19 19:24:05</td>   <td>4266</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinallTest.HotelSearchBox()[pri:8, instance:almosaferProject.FinallTest@757d6814]">HotelSearchBox</td> 
   <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="67eb8a">  <td>24/08/14 21:50:37</td>   <td>3970</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinallTest.testAlmosaferDefaultLanguageisEN()[pri:1, instance:almosaferProject.FinallTest@757d6814]">testAlmosaferDefaultLanguageisEN</td> 
+<tr bgcolor="67eb8a">  <td>24/08/19 19:24:01</td>   <td>152</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinallTest.test()[pri:7, instance:almosaferProject.FinallTest@757d6814]">test</td> 
   <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="67eb8a">  <td>24/08/14 21:50:37</td>   <td>4002</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinallTest.CheckdefaultCurrencyisSAR()[pri:2, instance:almosaferProject.FinallTest@757d6814]">CheckdefaultCurrencyisSAR</td> 
+<tr bgcolor="67eb8a">  <td>24/08/19 19:24:00</td>   <td>-227</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinallTest.CheckdefaultCurrencyisSAR()[pri:2, instance:almosaferProject.FinallTest@757d6814]">CheckdefaultCurrencyisSAR</td> 
+  <td>main@1937962514</td>   <td></td> </tr>
+<tr bgcolor="67eb8a">  <td>24/08/19 19:24:00</td>   <td>-154</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinallTest.CheckContactNumber()[pri:3, instance:almosaferProject.FinallTest@757d6814]">CheckContactNumber</td> 
   <td>main@1937962514</td>   <td></td> </tr>
 </table>
