--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,22 +1,30 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="67eb8a">  <td>24/08/19 19:24:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinallTest.CheckContactNumber()[pri:3, instance:almosaferProject.FinallTest@757d6814]">CheckContactNumber</td> 
-  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="67eb8a">  <td>24/08/19 19:24:00</td>   <td>47</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinallTest.CheckQitagLogo()[pri:4, instance:almosaferProject.FinallTest@757d6814]">CheckQitagLogo</td> 
-  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="67eb8a">  <td>24/08/19 19:24:00</td>   <td>-73</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinallTest.CheckdefaultCurrencyisSAR()[pri:2, instance:almosaferProject.FinallTest@757d6814]">CheckdefaultCurrencyisSAR</td> 
-  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="67eb8a">  <td>24/08/19 19:24:05</td>   <td>4420</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinallTest.HotelSearchBox()[pri:8, instance:almosaferProject.FinallTest@757d6814]">HotelSearchBox</td> 
-  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="67eb8a">  <td>24/08/19 19:24:01</td>   <td>154</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinallTest.checkHotel()[pri:5, instance:almosaferProject.FinallTest@757d6814]">checkHotel</td> 
-  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="67eb8a">  <td>24/08/19 19:23:56</td>   <td>-4111</td> <td>&nbsp;</td><td title="&gt;&gt;FinallTest.mytest()[pri:0, instance:almosaferProject.FinallTest@757d6814]">&gt;&gt;mytest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="67eb8a">  <td>24/08/19 19:24:05</td>   <td>4498</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinallTest.searchButton()[pri:9, instance:almosaferProject.FinallTest@757d6814]">searchButton</td> 
-  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="67eb8a">  <td>24/08/19 19:24:01</td>   <td>306</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinallTest.test()[pri:7, instance:almosaferProject.FinallTest@757d6814]">test</td> 
-  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="67eb8a">  <td>24/08/19 19:24:00</td>   <td>-171</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinallTest.testAlmosaferDefaultLanguageisEN()[pri:1, instance:almosaferProject.FinallTest@757d6814]">testAlmosaferDefaultLanguageisEN</td> 
-  <td>main@1937962514</td>   <td></td> </tr>
+<tr bgcolor="97d671">  <td>24/09/10 23:11:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinallTest.CheckContactNumber()[pri:3, instance:almosaferProject.FinallTest@373ebf74]">CheckContactNumber</td> 
+  <td>main@1408279755</td>   <td></td> </tr>
+<tr bgcolor="97d671">  <td>24/09/10 23:11:57</td>   <td>400</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinallTest.CheckDepatureDate()[pri:6, instance:almosaferProject.FinallTest@373ebf74]">CheckDepatureDate</td> 
+  <td>main@1408279755</td>   <td></td> </tr>
+<tr bgcolor="97d671">  <td>24/09/10 23:11:56</td>   <td>54</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinallTest.CheckQitagLogo()[pri:4, instance:almosaferProject.FinallTest@373ebf74]">CheckQitagLogo</td> 
+  <td>main@1408279755</td>   <td></td> </tr>
+<tr bgcolor="97d671">  <td>24/09/10 23:12:07</td>   <td>10479</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinallTest.CheckThePageFullyLoaded()[pri:11, instance:almosaferProject.FinallTest@373ebf74]">CheckThePageFullyLoaded</td> 
+  <td>main@1408279755</td>   <td></td> </tr>
+<tr bgcolor="97d671">  <td>24/09/10 23:11:56</td>   <td>-54</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinallTest.CheckdefaultCurrencyisSAR()[pri:2, instance:almosaferProject.FinallTest@373ebf74]">CheckdefaultCurrencyisSAR</td> 
+  <td>main@1408279755</td>   <td></td> </tr>
+<tr bgcolor="97d671">  <td>24/09/10 23:11:59</td>   <td>2442</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinallTest.FillHotelTab()[pri:8, instance:almosaferProject.FinallTest@373ebf74]">FillHotelTab</td> 
+  <td>main@1408279755</td>   <td></td> </tr>
+<tr bgcolor="97d671">  <td>24/09/10 23:12:01</td>   <td>4494</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinallTest.HotelSearchBox()[pri:9, instance:almosaferProject.FinallTest@373ebf74]">HotelSearchBox</td> 
+  <td>main@1408279755</td>   <td></td> </tr>
+<tr bgcolor="97d671">  <td>24/09/10 23:12:20</td>   <td>24131</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinallTest.SortItemsLowestToHighestPrice()[pri:12, instance:almosaferProject.FinallTest@373ebf74]">SortItemsLowestToHighestPrice</td> 
+  <td>main@1408279755</td>   <td></td> </tr>
+<tr bgcolor="97d671">  <td>24/09/10 23:11:56</td>   <td>209</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinallTest.checkHotel()[pri:5, instance:almosaferProject.FinallTest@373ebf74]">checkHotel</td> 
+  <td>main@1408279755</td>   <td></td> </tr>
+<tr bgcolor="97d671">  <td>24/09/10 23:11:51</td>   <td>-5199</td> <td>&nbsp;</td><td title="&gt;&gt;FinallTest.mytest()[pri:0, instance:almosaferProject.FinallTest@373ebf74]">&gt;&gt;mytest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1408279755</td>   <td></td> </tr>
+<tr bgcolor="97d671">  <td>24/09/10 23:12:01</td>   <td>4685</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinallTest.searchButton()[pri:10, instance:almosaferProject.FinallTest@373ebf74]">searchButton</td> 
+  <td>main@1408279755</td>   <td></td> </tr>
+<tr bgcolor="97d671">  <td>24/09/10 23:11:57</td>   <td>478</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinallTest.test()[pri:7, instance:almosaferProject.FinallTest@373ebf74]">test</td> 
+  <td>main@1408279755</td>   <td></td> </tr>
+<tr bgcolor="97d671">  <td>24/09/10 23:11:56</td>   <td>-116</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinallTest.testAlmosaferDefaultLanguageisEN()[pri:1, instance:almosaferProject.FinallTest@373ebf74]">testAlmosaferDefaultLanguageisEN</td> 
+  <td>main@1408279755</td>   <td></td> </tr>
 </table>
