--- a/test-output/index.html
+++ b/test-output/index.html
@@ -26,7 +26,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -40,7 +40,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Default_suite" class="navigator-link">
-              <span class="suite-name border-passed">Default suite</span>
+              <span class="suite-name border-failed">Default suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Dell\AppData\Local\Temp\testng-eclipse--1911420030\testng-customsuite.xml</span>
+                    <span>C:\Users\Dell\AppData\Local\Temp\testng-eclipse-1073934129\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">8 methods,   8 passed</span>
+                    <span class="method-stats">12 methods, 1 failed,   11 passed</span>
+                  </li>
+                  <li>
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Default_suite" class="hide-methods failed suite-Default_suite"> (hide)</a> <!-- hide-methods failed suite-Default_suite -->
+                      <a href="#" panel-name="suite-Default_suite" class="show-methods failed suite-Default_suite"> (show)</a> <!-- show-methods failed suite-Default_suite -->
+                    </span>
+                    <div class="method-list-content failed suite-Default_suite">
+                      <span>
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="almosaferProject.FinallTest" class="method navigator-link" hash-for-method="CheckThePageFullyLoaded">CheckThePageFullyLoaded</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content failed suite-Default_suite -->
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -109,6 +123,11 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="almosaferProject.FinallTest" class="method navigator-link" hash-for-method="CheckDepatureDate">CheckDepatureDate</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="almosaferProject.FinallTest" class="method navigator-link" hash-for-method="CheckQitagLogo">CheckQitagLogo</a> <!-- method navigator-link -->
                       </span>
                       <br/>
@@ -119,7 +138,17 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="almosaferProject.FinallTest" class="method navigator-link" hash-for-method="FillHotelTab">FillHotelTab</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="almosaferProject.FinallTest" class="method navigator-link" hash-for-method="HotelSearchBox">HotelSearchBox</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="almosaferProject.FinallTest" class="method navigator-link" hash-for-method="SortItemsLowestToHighestPrice">SortItemsLowestToHighestPrice</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -154,6 +183,59 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Default_suite" class="panel Default_suite">
+          <div class="suite-Default_suite-class-failed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="failed.png"/>
+              <span class="class-name">almosaferProject.FinallTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="CheckThePageFullyLoaded">
+                  </a> <!-- CheckThePageFullyLoaded -->
+                  <span class="method-name">CheckThePageFullyLoaded</span>
+                  <div class="stack-trace">java.lang.AssertionError: expected [true] but found [false]
+	at org.testng.Assert.fail(Assert.java:99)
+	at org.testng.Assert.failNotEquals(Assert.java:1037)
+	at org.testng.Assert.assertEqualsImpl(Assert.java:140)
+	at org.testng.Assert.assertEquals(Assert.java:122)
+	at org.testng.Assert.assertEquals(Assert.java:819)
+	at org.testng.Assert.assertEquals(Assert.java:829)
+	at almosaferProject.FinallTest.CheckThePageFullyLoaded(FinallTest.java:163)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
+	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
+	at java.base/java.lang.reflect.Method.invoke(Method.java:568)
+	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:133)
+	at org.testng.internal.TestInvoker.invokeMethod(TestInvoker.java:598)
+	at org.testng.internal.TestInvoker.invokeTestMethod(TestInvoker.java:173)
+	at org.testng.internal.MethodRunner.runInSequence(MethodRunner.java:46)
+	at org.testng.internal.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:824)
+	at org.testng.internal.TestInvoker.invokeTestMethods(TestInvoker.java:146)
+	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
+	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:128)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+	at org.testng.TestRunner.privateRun(TestRunner.java:794)
+	at org.testng.TestRunner.run(TestRunner.java:596)
+	at org.testng.SuiteRunner.runTest(SuiteRunner.java:377)
+	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:371)
+	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:332)
+	at org.testng.SuiteRunner.run(SuiteRunner.java:276)
+	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)
+	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:96)
+	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1212)
+	at org.testng.TestNG.runSuitesLocally(TestNG.java:1134)
+	at org.testng.TestNG.runSuites(TestNG.java:1063)
+	at org.testng.TestNG.run(TestNG.java:1031)
+	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
+	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:293)
+	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:91)
+
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Default_suite-class-failed -->
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -165,6 +247,13 @@
                   <a name="CheckContactNumber">
                   </a> <!-- CheckContactNumber -->
                   <span class="method-name">CheckContactNumber</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="CheckDepatureDate">
+                  </a> <!-- CheckDepatureDate -->
+                  <span class="method-name">CheckDepatureDate</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -183,9 +272,23 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
+                  <a name="FillHotelTab">
+                  </a> <!-- FillHotelTab -->
+                  <span class="method-name">FillHotelTab</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="HotelSearchBox">
                   </a> <!-- HotelSearchBox -->
                   <span class="method-name">HotelSearchBox</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="SortItemsLowestToHighestPrice">
+                  </a> <!-- SortItemsLowestToHighestPrice -->
+                  <span class="method-name">SortItemsLowestToHighestPrice</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -221,7 +324,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Dell\AppData\Local\Temp\testng-eclipse--1911420030\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Dell\AppData\Local\Temp\testng-eclipse-1073934129\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -270,44 +373,60 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(8);
+data.addRows(12);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'searchButton')
+data.setCell(0, 1, 'CheckThePageFullyLoaded')
 data.setCell(0, 2, 'almosaferProject.FinallTest')
-data.setCell(0, 3, 11888);
+data.setCell(0, 3, 13648);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'test')
+data.setCell(1, 1, 'searchButton')
 data.setCell(1, 2, 'almosaferProject.FinallTest')
-data.setCell(1, 3, 4112);
+data.setCell(1, 3, 5792);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'checkHotel')
+data.setCell(2, 1, 'FillHotelTab')
 data.setCell(2, 2, 'almosaferProject.FinallTest')
-data.setCell(2, 3, 149);
+data.setCell(2, 3, 2045);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'CheckQitagLogo')
+data.setCell(3, 1, 'test')
 data.setCell(3, 2, 'almosaferProject.FinallTest')
-data.setCell(3, 3, 98);
+data.setCell(3, 3, 1962);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'testAlmosaferDefaultLanguageisEN')
+data.setCell(4, 1, 'SortItemsLowestToHighestPrice')
 data.setCell(4, 2, 'almosaferProject.FinallTest')
-data.setCell(4, 3, 90);
+data.setCell(4, 3, 1530);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'HotelSearchBox')
+data.setCell(5, 1, 'checkHotel')
 data.setCell(5, 2, 'almosaferProject.FinallTest')
-data.setCell(5, 3, 76);
+data.setCell(5, 3, 189);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'CheckdefaultCurrencyisSAR')
+data.setCell(6, 1, 'HotelSearchBox')
 data.setCell(6, 2, 'almosaferProject.FinallTest')
-data.setCell(6, 3, 71);
+data.setCell(6, 3, 189);
 data.setCell(7, 0, 7)
-data.setCell(7, 1, 'CheckContactNumber')
+data.setCell(7, 1, 'CheckQitagLogo')
 data.setCell(7, 2, 'almosaferProject.FinallTest')
-data.setCell(7, 3, 44);
+data.setCell(7, 3, 153);
+data.setCell(8, 0, 8)
+data.setCell(8, 1, 'CheckDepatureDate')
+data.setCell(8, 2, 'almosaferProject.FinallTest')
+data.setCell(8, 3, 76);
+data.setCell(9, 0, 9)
+data.setCell(9, 1, 'testAlmosaferDefaultLanguageisEN')
+data.setCell(9, 2, 'almosaferProject.FinallTest')
+data.setCell(9, 3, 53);
+data.setCell(10, 0, 10)
+data.setCell(10, 1, 'CheckdefaultCurrencyisSAR')
+data.setCell(10, 2, 'almosaferProject.FinallTest')
+data.setCell(10, 3, 52);
+data.setCell(11, 0, 11)
+data.setCell(11, 1, 'CheckContactNumber')
+data.setCell(11, 2, 'almosaferProject.FinallTest')
+data.setCell(11, 3, 49);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 16 seconds</span>
+              <span class="suite-total-time">Total running time: 25 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -340,35 +459,53 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">testAlmosaferDefaultLanguageisEN</span>
-                <span class="method-start">3948 ms</span>
+                <span class="method-start">5088 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">CheckdefaultCurrencyisSAR</span>
-                <span class="method-start">4045 ms</span>
+                <span class="method-start">5150 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">CheckContactNumber</span>
-                <span class="method-start">4118 ms</span>
+                <span class="method-start">5204 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">CheckQitagLogo</span>
-                <span class="method-start">4165 ms</span>
+                <span class="method-start">5258 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">checkHotel</span>
-                <span class="method-start">4272 ms</span>
+                <span class="method-start">5413 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">CheckDepatureDate</span>
+                <span class="method-start">5604 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">test</span>
-                <span class="method-start">4424 ms</span>
+                <span class="method-start">5682 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">FillHotelTab</span>
+                <span class="method-start">7646 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">HotelSearchBox</span>
-                <span class="method-start">8538 ms</span>
+                <span class="method-start">9698 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">searchButton</span>
-                <span class="method-start">8616 ms</span>
+                <span class="method-start">9889 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">CheckThePageFullyLoaded</span>
+                <span class="method-start">15683 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">SortItemsLowestToHighestPrice</span>
+                <span class="method-start">29335 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
